Oxygen (SR1a) JDT Patch for Groovy Eclipse: JDT commit 2cf2e0d
Fix for issue #318: Groovy and Java 9 support